Fix tag icons on mobile devices.

--- a/src/less/blocks/tag_icon.less
+++ b/src/less/blocks/tag_icon.less
@@ -26,6 +26,11 @@
   line-height: 23px;
   text-align: center;
 
+  .micon {
+    font-size: inherit!important;
+    line-height: inherit!important;
+  }
+
   &-small {
     width: 18px;
     height: 18px;
